add atomic coord post

--- a/_posts/2015-08-14-blog-post-4.md
+++ b/_posts/2015-08-14-blog-post-4.md
@@ -1,20 +1,15 @@
 ---
-title: 'Blog Post number 4'
-date: 2015-08-14
-permalink: /posts/2012/08/blog-post-4/
+title: 'Atomic coordination files of dissolved species in cementitious materials'
+date: 2020-11-07
+permalink: /posts/2020/11/atomic-coordination-files/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Atomic coordination files
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Here you can find the atomic coordination files in .car format from my paper on modeling of the early stage formation mechanisms of cementitious materials. They include:
 
-Headings are cool
-======
+- Ca<sub>2+</sub>, Ca(OH)<sup>+</sup>, Ca(OH)<sub>2</sub>
+- SiO<sub>x</sub>(OH)<sub>4-x</sub><sup>x</sup>
+- Al(OH)<sub>4</sub><sup>-</sup>
 
-You can have many headings
-======
-
-Aren't headings cool?
-------
+They could serve as a good starting point if you want to do atomic simulation on the same/similar species. Please contact me if you have any questions when using these files!
