--- a/_posts/2020-11-07-post-1.md
+++ b/_posts/2020-11-07-post-1.md
@@ -6,7 +6,7 @@ tags:
   - Atomic coordination files
 ---
 
-[Here](http://kengran.github.io/files/atomic-coord-files-Yang-and-White-CCR-2020.zip) you can find the atomic coordination files in .car format from my [paper](https://www.sciencedirect.com/science/article/pii/S0008884620315465?via%3Dihub) on modeling of the early stage formation mechanisms of cementitious materials. They include:
+[Here](http://kengran.github.io/files/atomic-coord-files-Yang-and-White-CCR-2020.zip) you can find the atomic coordination files in .car format (native in DMol3 software) from my [paper](https://www.sciencedirect.com/science/article/pii/S0008884620315465?via%3Dihub) on modeling of the early stage formation mechanisms of cementitious materials. They include:
 
 - Ca<sup>2+</sup>, Ca(OH)<sup>+</sup>, Ca(OH)<sub>2</sub>
 - SiO<sub>x</sub>(OH)<sub>4-x</sub><sup>x-</sup>, SiO<sub>x</sub>(OH)<sub>4-x</sub>\*xNa
